SFDC/VFP-Part-2/src/objects/Custom_Product__c.object
<CustomObject>
    <fields>
        <fullName>Available_Quatity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available Quatity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_per_item__c</fullName>
        <label>Price per item</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Custom Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>